styles.scss
/* ... */
.contact-list:is(:hover, :focus-within) > .contact-list-tooltip {
  opacity: 1;
  visibility: visible;
}
@media (max-width: 768px) {
  .contact-list-tooltip.m-right {
    left: unset;
  }
}

// @main # More Link Popup
.more-link-popup {
  z-index: 9;
  background: var(--clr-secondary);
  position: absolute;
  visibility: hidden;
  opacity: 0;
  box-sizing: border-box;
  padding: 8px;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 360px;
  max-width: 100vw;
  max-height: 75vh;
  overflow: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
  
  border-image: url(/img/border-1-default-alt.png) 6 / 16px / 8px;
  // transform: scale(.88) translate(0) rotateZ(4deg);
  transition: opacity .25s, transform .5s, visibility .5s;
}
.more-link-popups:focus-within > .more-link-popup {
  visibility: visible; 
  opacity: 1;
  transform: none;
  transition: opacity .25s, transform .25s, visibility .25s;
}
// Desktop is separated for now because i'm not sure if this will stay
@media (min-width: 769px) {
  .more-link-popup {
    top: 88px;
    right: -8px;
    left: unset;
    bottom: unset;
    // border-image: url(/img/border-1-default-alt.png) 6 / 0 16px 16px 16px / 0 4px 4px 4px;
    transform: translateY(-8px);
    transition: opacity .25s, transform 0s .25s, visibility .25s;
  }
  .more-link-popups:focus-within > .more-link-popup {
    transition: opacity .25s, transform .25s, visibility .25s;
  }
}
@media (max-width: 768px) {
  .more-link-popup {
    top: unset;
    left: unset;
    bottom: 83px;
    width: 300px;

    border-image: url(/img/border-1-default-alt.png) 6 / 16px 0 0 16px / 8px 0 0 8px; // Remove right and bottom border image + outset. Affected by .nav-main and .nav-list size
    border-bottom: 0; // This remove the invisible border
    border-right: 0;
    // transform: none; // Reset transformation
    transition: opacity .25s, visibility .5s;
    & > * {
      transform: translateY(1rem);
      transition: transform .25s;
    }
  }
  .more-link-popups:focus-within > .more-link-popup > * {
    transform: none;
  }
}

// @main # Skip to
.skip-to-main {
  z-index: 9;
  position: fixed;
  top: 0;
  left: 10%;
  width: fit-content;
  padding: 16px;
  text-decoration: none;
  background-color: var(--clr-tooltip-background);
  border-image: url(/img/border-2.png) 8 / 16px / 0px;
  transform: translateY(-100%);
  transition: transform .25s;
  &:focus {
    transform: translateY(1rem);
  }
  &::after {
    content: "Skip";
    color: var(--clr-tooltip-text);
  }
}
.skip-to-top > a,
.skip-to-top > a::before {
  position: absolute;
  bottom: 0;
  right: 0;
  height: 48px;
  width: 48px;
}
.skip-to-top {
  z-index: 5;
  position: fixed;
  bottom: 0;
  right: 0;
  & > a {
    pointer-events: auto;
    padding: 16px;
    &::before {
      --icon-atlas-x: 3;
      --icon-atlas-y: 5;
      content: "";
      left: 0;
      top: 0;
      margin: auto;
      
      border-image: url(/img/border-1-default-gap.png) 4 / 16px/ 4px;
      background-image: var(--icon-atlas48-path);
      background-color: var(--clr-secondary);
      background-position: calc(var(--icon-atlas-x) * (var(--icon-atlas-size) * -1) + var(--icon-atlas-size)) calc(var(--icon-atlas-y) * (var(--icon-atlas-size) * -1) + var(--icon-atlas-size));
      transform: rotateZ(270deg);
      image-rendering: pixelated;
    }
  }
}
.skip-to-top.hidden {
  width: calc(90px + 10vw);
  height: 96px;
  transform: translateX(50%);
  transition: transform .25s;
  &:hover {
    transform: none;
  }
  &:focus {
    pointer-events: none;
  }
}
@media (max-width: 768px) {
  .skip-to-main {left: 2rem;}
  .skip-to-top {bottom: 90px;}
}

// @main # Tab-nav-only container
.tab-container {
  opacity: 0;
  transform: translateX(-20px);
  transition: opacity .25s, transform .5s ease;
}
.tab-container:focus-within {
  opacity: 1;
  transform: translateX(0);
}

// ! @title ________ Home ________
.body--home {
  margin: auto;
}
.home-bar {
  content: "";
  display: block;
  line-height: 48px;
  width: 100%;
  background-color: black;
}
.home-content {
  position: relative;
  display: flex;
  // height: 100%;
  // top: 0;
  // bottom: 0;
  // left: 0;
  // right: 0;
  image-rendering: pixelated;
  background-color: yellow;
}

// @section # Menu
.home-menu {
  flex: 1;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  box-sizing: border-box;
  // max-width: 512px;
  padding: 1rem 0;
  gap: 4px;
  margin: auto;
  // margin-top: 8ch;
  & a {
    display: block;
    text-decoration: none;
    color: crimson;
  }
  & label {
    display: block;
    cursor: pointer;
  }
}
.home-menu-container {
  display: flex;
  flex: 1;
  width: 100%;
  // gap: 8px;
  // height: 72ch;
  padding: 0 1rem;
  height: calc(100dvh - 48px); // Compensate border top
  box-sizing: border-box;
  overflow: scroll;
  background-color: palegoldenrod;
}
.home-menu-separator {
  flex: .65;
  background-color: yellowgreen;
}
.home-menu-list {
  z-index: 1;
  text-align: center;
  font-size: 3rem;
  line-height: 128px;
  max-width: 256px;
  color: black;
  flex: 1;
  height: 128px;
  cursor: pointer;
  border: 1px solid gray;
  background-color: peachpuff;
}
.home-menu-list--free {
  height: auto;
  max-width: calc((256px * 2) + 4px ); // list width times 2, plus gap. Border not incl
}
.home-menu__gallery {
  margin: auto;
}
.home-menu__sample,
.home-menu__sample-toggle {
  margin: auto;
  font-size: 2rem;
  line-height: 64px;
  background-color: peru;
}
.home-menu__sample-toggle > [data-index="2"] {
  display: none;
}
.home-menu__sample {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 2px 4px;
  padding: 0 8px;

  overflow: scroll;
  height: 0;
  visibility: hidden;
  transition: height .5s, visibility .5s;
}
/* ... */

